--- a/EX2.html
+++ b/EX2.html
@@ -5,9 +5,9 @@
             body {background-color:powderblue;}
             h1   {color:blue;}
             p    {color:red;}
-        <style>
+        </style>
         <title>css internal</title>
-        </head>
+    </head>
         <body>
             <h1>This is a heading</h1>
             <p>This is a paragraph.</p>
